--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,6 @@ ENV=development
 REDIS_ADDR=localhost:6379
 REDIS_PASS=
 REDIS_DB=0
+MARVEL_BASE_URL=https://gateway.marvel.com:443
+MARVEL_PRIVATE_KEY=
+MARVEL_PUBLIC_KEY=
